--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -10,7 +10,7 @@
 		<main class="page-content workarea">
 			<div class="home-slider--view">
 				<div class="home-slider">
-					<div class="home-slider__item" style="background-image: url(img/content/penal_banner.jpeg);">
+					<div class="home-slider__item" style="background-image: url(img/content/penal_banner.jpg);">
 						<div class="container">
 							<div class="home-slider__content">
 								<div class="home-slider__brand">
@@ -23,7 +23,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="home-slider__item" style="background-image: url(img/content/0M_1M_AGK.jpeg);">
+					<div class="home-slider__item" style="background-image: url(img/content/0M_1M_AGK.jpg);">
 						<div class="container">
 							<div class="home-slider__content">
 								<div class="home-slider__brand">
@@ -36,7 +36,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="home-slider__item" style="background-image: url(img/content/caskad.jpeg);">
+					<div class="home-slider__item" style="background-image: url(img/content/caskad.jpg);">
 						<div class="container">
 							<div class="home-slider__content">
 								<div class="home-slider__brand">
@@ -233,11 +233,11 @@
 								Фабрика ProfilDoors образована в 2002 г. и была ориентирована на изготовление комплектующих для дверных фабрик. <br> 2004 г. — серийный запуск производства межкомнатных дверей. <br> На сегодняшний день ProfilDoors является одним из крупнейших производителей межкомнатных дверей. Наряду со стандартными технологическими процессами по изготовлению выпускаемой продукции, ключевое значение уделяется собственным разработкам.
 							</div>
 						</div>
-						<div class="home-doors-descr__view">
+						<!-- <div class="home-doors-descr__view">
 							<div class="main-page-video-alt">
                                 <iframe width="100%" height="370" src="https://www.youtube.com/embed/WUSmOuyrHSA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                             </div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
