--- a/assets/src/materials-in.html
+++ b/assets/src/materials-in.html
@@ -21,6 +21,8 @@
                     <h1>КОРОБ INTEGRAL</h1>
                 </div>
             </div>
+
+            <!-- CONTENT-PART -->
 			<div class="materials">
 				<div class="container">
                     <div class="materials-top">
@@ -61,84 +63,88 @@
                     </div>
 				</div>
 			</div>
-
+            <!-- end CONTENT-PART -->
 		</main>
 	</div><!-- END LAYOUT-->
     <!-- POPUP -->
     <div id="dealer-popup" class="popup m-dealer dnone">
-        <div class="popup-title">
-            Стать дилером
-        </div>
-        <form action="#">
-            <div class="popup-form">
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Имя и Фамилия 
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-name" name="name" value="">
-                </div>
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Адрес эл. почты
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-email" name="email" value="">
-                </div>
+		<div class="popup-title">
+			Стать дилером
+		</div>
+		<div class="b-pop-content m-hidden">
+			Спасибо!<br><br>
+			Ваша заявка отправлена и будет рассмотрена в скором времени.
+		</div>
+		<form action="#">
+			<div class="popup-form">
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Имя и Фамилия 
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-name" name="name" value="">
+				</div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Адрес эл. почты
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-email" name="email" value="">
+				</div>
 
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Название компании
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-company" name="company" value="">
-                </div>
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Сайт
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-website" name="website" value="">
-                </div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Название компании
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-company" name="company" value="">
+				</div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Сайт
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-website" name="website" value="">
+				</div>
 
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Страна
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-country" name="country" value="">
-                </div>
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Город
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-city" name="city" value="">
-                </div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Страна
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-country" name="country" value="">
+				</div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Город
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-city" name="city" value="">
+				</div>
 
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Номер телефона
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-phone" name="phone" value="">
-                </div>
-                <div class="popup-form__item">
-                    <div class="popup-form__label">
-                        Дополнительная информация
-                        <span class="m-error">*</span>
-                    </div>
-                    <input type="text" id="b-pop-dialer_form-info" name="info" value="">
-                </div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Номер телефона
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-phone" name="phone" value="">
+				</div>
+				<div class="popup-form__item required">
+					<div class="popup-form__label">
+						Дополнительная информация
+						<span class="m-error">*</span>
+					</div>
+					<input type="text" id="b-pop-dialer_form-info" name="info" value="">
+				</div>
 
 
-                <div class="popup-form__item">
-                    <input class="btn" type="submit" name="send" value="Отправить">
-                </div>
-            </div>
-        </form>
-        
-    </div>
+				<div class="popup-form__item">
+					<input class="btn" type="submit" name="send" value="Отправить">
+				</div>
+			</div>
+		</form>
+		
+	</div>
 	//= template/footer.html
 
 	<script src="js/libs/libs.min.js"></script>
