--- a/assets/src/findings.html
+++ b/assets/src/findings.html
@@ -21,6 +21,8 @@
                     <h1>ФУРНИТУРА</h1>
                 </div>
             </div>
+
+            <!-- CONTENT-PART -->
 			<div class="findings">
                 <div class="container">
                     <div class="findings__list">
@@ -153,6 +155,7 @@
                     </div>
                 </div>
             </div>
+            <!-- end CONTENT-PART -->
 
 		</main>
 	</div><!-- END LAYOUT-->
@@ -161,16 +164,20 @@
 		<div class="popup-title">
 			Стать дилером
 		</div>
+		<div class="b-pop-content m-hidden">
+			Спасибо!<br><br>
+			Ваша заявка отправлена и будет рассмотрена в скором времени.
+		</div>
 		<form action="#">
 			<div class="popup-form">
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Имя и Фамилия 
 						<span class="m-error">*</span>
 					</div>
 					<input type="text" id="b-pop-dialer_form-name" name="name" value="">
 				</div>
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Адрес эл. почты
 						<span class="m-error">*</span>
@@ -178,14 +185,14 @@
 					<input type="text" id="b-pop-dialer_form-email" name="email" value="">
 				</div>
 
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Название компании
 						<span class="m-error">*</span>
 					</div>
 					<input type="text" id="b-pop-dialer_form-company" name="company" value="">
 				</div>
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Сайт
 						<span class="m-error">*</span>
@@ -193,14 +200,14 @@
 					<input type="text" id="b-pop-dialer_form-website" name="website" value="">
 				</div>
 
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Страна
 						<span class="m-error">*</span>
 					</div>
 					<input type="text" id="b-pop-dialer_form-country" name="country" value="">
 				</div>
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Город
 						<span class="m-error">*</span>
@@ -208,14 +215,14 @@
 					<input type="text" id="b-pop-dialer_form-city" name="city" value="">
 				</div>
 
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Номер телефона
 						<span class="m-error">*</span>
 					</div>
 					<input type="text" id="b-pop-dialer_form-phone" name="phone" value="">
 				</div>
-				<div class="popup-form__item">
+				<div class="popup-form__item required">
 					<div class="popup-form__label">
 						Дополнительная информация
 						<span class="m-error">*</span>
