--- a/assets/src/catalog.html
+++ b/assets/src/catalog.html
@@ -24,10 +24,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия PW</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PW</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -43,10 +43,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия AG</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия AG</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -62,10 +62,10 @@
                                         Коллекция под покраску и скрытые короба
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">0Z под покраску</a>
-                                        <a href="#" class="catalog-i-item">Классическое открывание</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>0Z под покраску</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Классическое открывание</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -81,10 +81,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия PW</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PW</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -100,10 +100,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия PW</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PW</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -119,10 +119,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия AG</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия AG</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -138,10 +138,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия PW</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PW</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
@@ -157,10 +157,10 @@
                                         Коллекции с инновационным эмалевым покрытием
                                     </a>
                                     <div class="catalog-i-list">
-                                        <a href="#" class="catalog-i-item">Серия AG</a>
-                                        <a href="#" class="catalog-i-item">Серия PA</a>
-                                        <a href="#" class="catalog-i-item">Серия PD</a>
-                                        <a href="#" class="catalog-i-item">Серия PM</a>
+                                        <a href="#" class="catalog-i-item"><span>Серия AG</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PA</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PD</span></a>
+                                        <a href="#" class="catalog-i-item"><span>Серия PM</span></a>
                                     </div>
                                 </div>
                                 <a href="#" class="catalog__img">
