--- a/assets/src/where.html
+++ b/assets/src/where.html
@@ -50,12 +50,12 @@
                             Город
                         </div>
                         <div class="where-city__toggle">
-                            <select class="js-chosen" placeholder="Любой">
-                                <option value=""></option>
+                            <select class="js-chosen" data-placeholder="Любой">
+                                <!-- <option value=""></option> -->
+                                <option value="Минск">Минск</option>
                                 <option value="Витебск">Витебск</option>
                                 <option value="Гомель">Гомель</option>
                                 <option value="Гродно">Гродно</option>
-                                <option value="Минск">Минск</option>
                                 <option value="Могилев">Могилев</option>
                                 <option value="Солигорск">Солигорск</option>
                             </select>
