--- a/assets/src/findings-in.html
+++ b/assets/src/findings-in.html
@@ -100,7 +100,10 @@
             
             <div class="catalog-menu">
                 <div class="container">
-                    ddd
+                    <div class="catalog-menu__center">
+                        <a href="#" class="catalog-menu__link">Все двери</a>
+                        <span class="catalog-menu__link selected">Фурнитура</span>
+                    </div>
                 </div>
             </div>
         </header>
@@ -284,6 +287,7 @@
                                 </div>
                             </div>
                         </div>
+                        <a href="#">ВИДЕОМОНТАЖ</a>
                     </div>
                 </div>
             </div>
