--- a/assets/src/seriya.html
+++ b/assets/src/seriya.html
@@ -110,7 +110,7 @@
                         <a href="#" class="catalog-menu__link">PA</a>
                         <a href="#" class="catalog-menu__link">PD</a>
                         <a href="#" class="catalog-menu__link">PM</a>
-                        <a href="#" class="catalog-menu__link active">PW</a>
+                        <span class="catalog-menu__link active">PW</span>
                         <a href="#" class="catalog-menu__link">ZN</a>
                         <a href="#" class="catalog-menu__link">OZ</a>
                         <a href="#" class="catalog-menu__link">OPA</a>
@@ -160,7 +160,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR0" value="white" checked="">
                                             <label for="COLOR0">
-                                                <img src="img/content/Vayt.jpeg">
+                                                <img src="img/content/Vayt.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">Вайт (RAL 110 96 02)</div>
                                         </div>
@@ -168,7 +168,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR1" value="cream_white">
                                             <label for="COLOR1">
-                                                <img src="img/content/Krem_Vayt.jpeg">
+                                                <img src="img/content/Krem_Vayt.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Крем Вайт (RAL 120-02)
@@ -178,7 +178,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR2" value="creamy_magnolia">
                                             <label for="COLOR2">
-                                              <img src="img/content/Kremovaya_Magnoliya.jpeg">
+                                              <img src="img/content/Kremovaya_Magnoliya.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Кремовая Магнолия (RAL 120-04)
@@ -188,7 +188,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR3" value="light_grey">
                                             <label for="COLOR3">
-                                              <img src="img/content/Layt_Grey.jpeg">
+                                              <img src="img/content/Layt_Grey.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Лайт Грей (RAL 870-01)
@@ -198,7 +198,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR4" value="smokey">
                                             <label for="COLOR4">
-                                              <img src="img/content/Smoki.jpeg">
+                                              <img src="img/content/Smoki.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Смоки (RAL 870-02)
@@ -208,7 +208,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR5" value="graphite">
                                             <label for="COLOR5">
-                                              <img src="img/content/Grafit.jpeg">
+                                              <img src="img/content/Grafit.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Графит (Pantone 425С)
@@ -217,7 +217,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR6" value="black">
                                             <label for="COLOR6">
-                                              <img src="img/content/CHyernyy.jpeg">
+                                              <img src="img/content/CHyernyy.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Блэк
@@ -226,7 +226,7 @@
                                         <div class="filter-color__item">
                                             <input type="radio" name="COLOR[]" id="COLOR7" value="navy_blue">
                                             <label for="COLOR7">
-                                              <img src="img/content/Nevi_blu.jpeg">
+                                              <img src="img/content/Nevi_blu.jpeg" alt="">
                                             </label>
                                             <div class="filter-color__rollover">
                                                 Нэви Блу (RAL 7016)
@@ -294,6 +294,38 @@
                                         </div>
                                         <div class="series__top">
                                             5PW
+                                        </div>
+                                    </a>
+                                </div>
+
+                                <div class="series__item">
+                                    <a href="#" class="series__in">
+                                        <div class="series__img">
+                                            <img src="img/content/PW_1_Vayt.png" alt="">
+                                        </div>
+                                        <div class="series__top">
+                                            1PW
+                                        </div>
+                                    </a>
+                                </div>
+
+                                <div class="series__item">
+                                    <a href="#" class="series__in">
+                                        <div class="series__img">
+                                            <img src="img/content/PW_1_Vayt.png" alt="">
+                                        </div>
+                                        <div class="series__top">
+                                            1PW
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="series__item">
+                                    <a href="#" class="series__in">
+                                        <div class="series__img">
+                                            <img src="img/content/PW_1_Vayt.png" alt="">
+                                        </div>
+                                        <div class="series__top">
+                                            1PW
                                         </div>
                                     </a>
                                 </div>
